@@ -1,0 +1,48 @@
+<?php
+
+namespace App\Sids;
+
+class Buildings
+{
+    public const WOODCUTTER = 1;
+    public const CLAY_PIT = 2;
+    public const IRON_MINE = 3;
+    public const CROPLAND = 4;
+    public const SAWMILL = 5;
+    public const BRICKYARD = 6;
+    public const IRON_FOUNDRY = 7;
+    public const GRAIN_MILL = 8;
+    public const BAKERY = 9;
+    public const WAREHOUSE = 10;
+    public const GRANARY = 11;
+    public const BLACKSMITH = 12;
+    public const ARMOURY = 13;
+    public const TOURNAMENT_SQUARE = 14;
+    public const MAIN_BUILDING = 15;
+    public const RALLY_POINT = 16;
+    public const MARKETPLACE = 17;
+    public const EMBASSY = 18;
+    public const BARRACKS = 19;
+    public const STABLE = 20;
+    public const WORKSHOP = 21;
+    public const ACADEMY = 22;
+    public const CRANNY = 23;
+    public const TOWN_HALL = 24;
+    public const RESIDENCE = 25;
+    public const PALACE = 26;
+    public const TREASURY = 27;
+    public const TRADE_OFFICE = 28;
+    public const GREAT_BARRACKS = 29;
+    public const GREAT_STABLE = 30;
+    public const CITY_WALL = 31;
+    public const EARTH_WALL = 32;
+    public const PALISADE = 33;
+    public const STONEMASONS_LODGE = 34;
+    public const BREWERY = 35;
+    public const TRAPPER = 36;
+    public const HEROS_MANSION = 37;
+    public const GREAT_WAREHOUSE = 38;
+    public const GREAT_GRANARY = 39;
+    public const WONDER_OF_THE_WORLD = 40;
+    public const HORSE_DRINKING_TROUGH = 41;
+}
