@@ -110,7 +110,9 @@ class Building {
 	public function canBuild($id,$tid) {
 		global $village,$session,$database;
 		$demolition = $database->getDemolition($village->wid);
-		if($demolition[0]['buildnumber']==$id) { return 11; }
+		if (!empty($demolition) && $demolition[0]['buildnumber']==$id) {
+		    return 11;
+		}
 		if($this->isMax($tid,$id)) {
 			return 1;
 		} else if($this->isMax($tid,$id,1) && ($this->isLoop($id) || $this->isCurrent($id))) {
