@@ -2,6 +2,7 @@
 [*] global variables call fixed
 [*] cookies expiration date in js fixed
 [*] empty POST warning fix
+[*] palace fixed
 
 29.04.2020
 [*] admin/database fixed and decorated
